# Shaastra2026

./: ARCHITECTURE.py  README.md  SUMMARY.md  api.py  hdfc_transactions.csv  idbi_transactions.csv  pyproject.toml  sbi_transactions.csv
backend/: .env.example  QUICKSTART.md  api.py  demo_with_gemini.py  eda_bank_transactions.py  main.py  pyproject.toml
backend/data/: SBI Transactions.csv
backend/src/: colab_integration.py  data_quality.py  record_processor.py
data/: HDFC Transactions.csv  IDBI Transactions.csv  citi_transactions.csv
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: RegistrationStepperDemo.tsx
frontend/src/components/ai/: AIAnalysisSummary.tsx
frontend/src/components/anomaly/: AnomalySummary.tsx  HighRiskColumns.tsx  OutlierTable.tsx  ValidationErrors.tsx
frontend/src/components/dashboard/: DatasetStats.tsx  DimensionChart.tsx  QualityScoreCard.tsx
frontend/src/components/insights/: LLMInsightsPanel.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  progress.tsx  registration-stepper.tsx
frontend/src/components/upload/: AnalysisStepper.tsx  FileUpload.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: api.ts
src/: agent.py  langgraph_orchestrator.py  record_processor.py
