[project]
name = "iit"
version = "0.1.0"
description = "Parallel agent orchestration system for data quality analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
